ingress-nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vre-ingress
  namespace: utility
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "512k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180s"
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: portal
          servicePort: 80
        path: /(vre/.+)
        pathType: ImplementationSpecific
      - backend:
          serviceName: vre-home
          servicePort: 80
        path: /vre($|/$)
        pathType: ImplementationSpecific
      - backend:
          serviceName: vre-home
          servicePort: 80
        path: /vre/(pages/.*)
        pathType: ImplementationSpecific
      - backend:
          serviceName: kong-proxy
          servicePort: 8000
        path: /vre/(api/vre.*)
        pathType: ImplementationSpecific
      - backend:
          serviceName: vre-home
          servicePort: 80
        path: /vre/(_next/.*)
        pathType: ImplementationSpecific
      - backend:
          serviceName: keycloak
          servicePort: 8080
        path: /(vre/auth/.*)
        pathType: ImplementationSpecific
