ingress-nginx/jhub-indoctestproject-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jhub-ingress
  namespace: vre-project-indoctestproject
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /workbench/indoctestproject/j/
        backend:
          serviceName: proxy-public
          servicePort: 80
