ingress-nginx/superset-indoctestproject.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: superset-ingress
  namespace: vre-project-indoctestproject
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-redirect-from: ~*http://vre.charite.de/((?!vre|bi).*)
    nginx.ingress.kubernetes.io/proxy-redirect-to: https://vre.charite.de/bi/indoctestproject/$1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /bi/indoctestproject/(.*)
        backend:
          serviceName: superset-indoctestproject
          servicePort: 8088
