ingress-nginx/xwiki-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xwiki-ingress
  namespace: utility
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /(xwiki(/|$).*)
        backend:
          serviceName: xwiki-xwiki
          servicePort: 80
